fix: layout of the banner shifted

--- a/site/_scss/blocks/_announcement-banner.scss
+++ b/site/_scss/blocks/_announcement-banner.scss
@@ -8,7 +8,8 @@ announcement-banner[hidden] {
 
 announcement-banner {
   &:not(.cookie-banner) [data-banner-close-btn] {
-    margin: -0.5rem 1rem -0.5rem 0;
+    line-height: 1.125rem;
+    margin: -0.5rem 1rem -0.4rem 0;
     opacity: 0;
     padding: 0 0.5rem;
     pointer-events: none;
