--- a/site/_scss/blocks/_top-nav.scss
+++ b/site/_scss/blocks/_top-nav.scss
@@ -30,7 +30,7 @@ top-nav {
       gap: 2.5rem;
     }
 
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       gap: 0;
       grid-template-columns: 1fr 1fr;
     }
@@ -65,7 +65,7 @@ top-nav[data-search-active] {
       grid-template-columns: 1fr 3fr 1fr;
     }
 
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       grid-template-columns: 1fr;
     }
   }
@@ -123,7 +123,7 @@ top-nav[data-search-active] {
 
   @media (max-width: 992px) {
     search-box[active] .search-box__inner {
-      margin-top: 0.5rem;
+      margin-top: 0.3125rem;
     }
   }
 }
@@ -158,7 +158,7 @@ search-box {
     min-width: auto;
   }
 
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     &:not([active]) .search-box__btn {
       position: absolute;
       right: 0;
@@ -221,7 +221,7 @@ search-box {
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   top-nav {
     padding: 0.125rem 0.75rem;
 
